--- a/style/architects.css
+++ b/style/architects.css
@@ -153,7 +153,9 @@ nav li a{
 
 
         header{
+
             padding: 50px;
+
         }
     
         nav{
@@ -163,3 +165,81 @@ nav li a{
 
 
     }
+
+/* main section styles started */
+
+.left-content{
+    max-width: 500px;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    /* grid-template-rows: repeat(2,1fr); */
+}
+
+.first-main-container{
+    display: flex;
+    gap: 50px;
+    margin-left: 20px;
+    margin-top: 50px;
+}
+
+
+.right-content{
+    max-width: 500px;
+    padding-left: 200px;
+    padding-top: 200px;
+   
+
+
+}
+
+
+/* main section styles */
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* teams container styles */
+
+
+.teams-container{
+    display: flex;
+    align-items: center;
+    gap: 76px;
+    margin-top: 85px;
+}
+
+.teams-image-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+}
+
+.teams-content{
+   padding-right: 70px;
+   padding-left: 70px;
+}
+
+.teams-content-title{
+    font-size: 2.6rem;
+    
+}
+
+.teams-content-title .Quick-list{
+    color: rgb(114, 114, 114);
+     font-weight: 500; 
+}
+
+
+.teams-content-title .of-Our{
+    color: rgb(19, 19, 19);
+}
+
+
+.teams-content-title .text-features{
+    color: rgb(255, 144, 14);
+    font-weight: 700;
+}
+
