--- a/style/architects.css
+++ b/style/architects.css
@@ -37,6 +37,15 @@
     cursor:pointer;
 }
 
+
+.text-light-gray{
+    color: rgb(114, 114, 114);
+    font-size: 1rem;
+    font-weight: 400;
+   
+}
+
+
 /* header styles */
 
 header{
@@ -99,12 +108,6 @@ nav li a{
    
 }
 
-.banner-description{
-    color: rgb(114, 114, 114);
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: center;
-}
 
 
 
@@ -128,43 +131,6 @@ nav li a{
 
 }
 
-/* responsive media queries */
-    /* mobile device */
-@media screen and (max-width:576px) {
-    
-    header{
-        padding: 20px;
-    }
-
-    nav{
-        flex-direction: column;
-    }
-        ul> li{
-            flex-direction: column;
-        }
-
-
-    }
-
-
-    /* tablet or media devices */
-
-    @media screen and (min-width:576px) and (max-width:960px) {
-
-
-        header{
-
-            padding: 50px;
-
-        }
-    
-        nav{
-            flex-direction: column;
-
-        }
-
-
-    }
 
 /* main section styles started */
 
@@ -198,7 +164,7 @@ nav li a{
 
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 /* teams container styles */
@@ -208,7 +174,7 @@ main{
     display: flex;
     align-items: center;
     gap: 76px;
-    margin-top: 85px;
+    
 }
 
 .teams-image-container{
@@ -243,3 +209,93 @@ main{
     font-weight: 700;
 }
 
+.teams-content .text-light-gray{
+    color: rgb(114, 114, 114);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* responsive media queries */
+
+/* mobile device */
+@media screen and (max-width:576px) {
+    
+    header{
+        padding: 20px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+        ul> li{
+            flex-direction: column;
+        }
+
+
+    }
+
+
+    /* tablet or media devices */
+
+    @media screen and (min-width:576px) and (max-width:960px) {
+
+
+        header{
+
+            padding: 50px;
+
+        }
+    
+        nav{
+            flex-direction: column;
+
+        }
+
+    }
+
+    @media screen and (max-width:576px) {
+
+        .teams-container{
+            flex-direction: column-reverse;
+        }
+
+        .teams-image-container{
+           grid-template-columns: 1fr;
+        }
+    }
+    .teams-content{
+        padding-right: 20px;
+        padding-left: 20px;
+     }
+
+
+    @media screen and (min-width:576px) and (max-width:960px) {
+
+
+        .teams-container{
+            flex-direction: column-reverse;
+            text-align: center;
+        }
+
+
+    }
+
+    .teams-content{
+        padding-right: 40px;
+        padding-left: 40px;
+     }
