--- a/style/architects.css
+++ b/style/architects.css
@@ -94,6 +94,11 @@ nav li a{
   
 }
 
+.facts-section .section-title{
+    margin-top: 24px;
+
+}
+
 
 
 /* banner styles */
@@ -108,14 +113,6 @@ nav li a{
    
 }
 
-
-
-
-.banner{
-   
-   
-   
-}
 
 .banner-content{
    max-width: 800px;
@@ -139,7 +136,7 @@ nav li a{
     gap: 20px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    /* grid-template-rows: repeat(2,1fr); */
+    
 }
 
 .first-main-container{
@@ -155,8 +152,6 @@ nav li a{
     padding-left: 200px;
     padding-top: 200px;
    
-
-
 }
 
 
@@ -218,31 +213,75 @@ main{
 }
 
 
-.features-container{
+/* facts section styles */
+
+
+.facts-card-container{
     display: flex;
-    margin-top: 10rem;
+    justify-content: space-around;
+    
    
 }
 
 
+.facts-card-container .card{
+
+box-sizing: border-box;
+border: 1px solid rgb(255, 144, 14);
+border-radius: 8px;
+text-align: center;
+padding:  30px;
+
+}
+
+
+.facts-card-container .card-stats{
+
+    font-size: 2.8rem;
+    color: rgb(66, 66, 66);
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 20px;
+
+}
+
+.facts-card-container .card-title{
+
+    font-weight: 600;
+    color: rgb(114, 114, 114);
+    font-size: 1.25rem;
+   
+   
+}
+
+.facts-section {
+    text-align: center;
+}
 
 
 
+/* sponspors section styles */
+
+.sponspors-section {
+
+    text-align: center;
+}
 
 
+.sponspors-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    align-items: center;
+    gap: 40px;
+}
 
 
+.sponspors-img-container img{
+    width: 160px;
 
 
-
-
-
-
-
-
-
-
-
+}
 
 
 
@@ -265,10 +304,43 @@ main{
             flex-direction: column;
         }
 
+        .teams-container{
+            flex-direction: column-reverse;
+        }
+
+        .teams-image-container{
+            grid-template-columns: 1fr;
+         }
+
+
+         .teams-content{
+            padding-right: 20px;
+            padding-left: 20px;
+         }
+
+         .facts-card-container{
+            flex-direction: column;
+            padding-left: 20px;
+            padding-right: 20px;
+            gap: 20px;
+          
+        }
+
+
+        .sponspors-img-container{
+            
+            flex-direction: column;
+        
+            
+        }
+       
 
     }
 
 
+    
+
+    
     /* tablet or media devices */
 
     @media screen and (min-width:576px) and (max-width:960px) {
@@ -277,38 +349,19 @@ main{
         header{
 
             padding: 50px;
-
-        }
     
+        }
+
+
         nav{
             flex-direction: column;
-
+    
         }
-
-    }
-
-    @media screen and (max-width:576px) {
-
-        .teams-container{
-            flex-direction: column-reverse;
-        }
-
-        .teams-image-container{
-           grid-template-columns: 1fr;
-        }
-    }
-    .teams-content{
-        padding-right: 20px;
-        padding-left: 20px;
-     }
-
-
-    @media screen and (min-width:576px) and (max-width:960px) {
-
 
         .teams-container{
             flex-direction: column-reverse;
             text-align: center;
+            
         }
 
 
@@ -318,3 +371,23 @@ main{
         padding-right: 40px;
         padding-left: 40px;
      }
+
+
+
+     @media screen and (min-width:576px) and (max-width:960px){
+
+        .sponspors-img-container{
+
+            flex-direction: column;
+           }
+
+     }
+
+     
+   
+
+
+
+
+
+
