--- a/style/architects.css
+++ b/style/architects.css
@@ -132,7 +132,7 @@ nav li a{
 /* main section styles started */
 
 .left-content{
-    max-width: 500px;
+    /* max-width: 500px; */
     gap: 20px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -146,13 +146,6 @@ nav li a{
     margin-top: 50px;
 }
 
-
-.right-content{
-    max-width: 500px;
-    padding-left: 200px;
-    padding-top: 200px;
-   
-}
 
 
 /* main section styles */
@@ -210,7 +203,102 @@ main{
     font-weight: 400;
     line-height: 26px;
     text-align: left;
+
 }
+
+
+
+/* features section styles */
+
+
+.fratures{
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+    border: 2px solid red;
+    
+}
+
+.fratures-content .card{
+
+border-radius: 8px;
+box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06);
+background: rgb(249, 228, 228);
+padding: 30px;
+text-align: left;
+margin-bottom: 30px;
+
+}
+
+
+.fratures-content h4{
+ color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 1.2rem;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+}
+
+.fratures-content .text-light-gray{
+
+color: rgb(114, 114, 114);
+font-size: 1rem;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
+
+}
+
+
+.fratures-content .section-title{
+    border-left:5px solid tomato;
+    padding-left: 20px;
+}
+
+
+
+
+
+.ten-years-box  {
+   
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    background: rgb(255, 144, 14);
+    padding: 40px;
+    width: 342px;
+   
+}
+
+.ten-years-box h2 {
+
+    color: rgb(255, 255, 255);
+}
+
+.ten-years-box p{
+    color: rgb(255, 255, 255);
+}
+
+.ten-years-box h2{
+    font-size: 4rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* facts section styles */
@@ -262,10 +350,11 @@ padding:  30px;
 
 /* sponspors section styles */
 
-.sponspors-section {
-
+.sponspors-section .section-title{
+   
     text-align: center;
 }
+
 
 
 .sponspors-img-container{
@@ -282,6 +371,31 @@ padding:  30px;
 
 
 }
+
+
+.footer{
+
+border-radius: 8px;
+
+background: rgb(251, 230, 204);
+
+}
+
+.footer , p{
+    color: rgb(66, 66, 66);
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -326,16 +440,14 @@ padding:  30px;
           
         }
 
-
         .sponspors-img-container{
             
             flex-direction: column;
         
-            
         }
-       
 
     }
+
 
 
     
