--- a/style/architects.css
+++ b/style/architects.css
@@ -1,5 +1,10 @@
 /* work sans font */
 
+ body {
+    margin: 0;
+}
+
+
 .work-sans {
   font-family: "Work Sans", sans-serif;
   font-optical-sizing: auto;
